--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
 </head>
 <body>
     <h1>Streamlit Post Message Test</h1>
-    <iframe id="toolFrame" src="http://0.0.0.0:8080?embed=True" width="100%" height="600"></iframe>
+    <iframe id="toolFrame" src="/streamlit/?embed=True" width="100%" height="600"></iframe>
 </body>
 </html>
